--- a/about/templates/about.html
+++ b/about/templates/about.html
@@ -24,7 +24,7 @@
                     </p>
                     <p class="about_explanation_02">
                         一人ひとりの想いを形を変え表現することができるWebデザインに惹かれ、次第に自分でもアプリケーションを作成するようになる。<br>
-                        “繊細さ”、”体験”、”心”を大切にしており、一から一人ひとりの心や想いを体現できるモノづくりを目指しています。
+                        "繊細さ"、"体験"、"心"を大切にしており、一から一人ひとりの心や想いを体現できるモノづくりを目指しています。
                     </p>
                 </div>
             </div>
@@ -37,26 +37,23 @@
         <div class="about_container_inner_02">
             <h2 class="about_skills">できること</h2>
             <div class="about_skills_container">
-                <div class="about_skills_design">
-                    <h3 class="about_skills_h3 zen-maru-gothic-regular">ウェブデザイン</h3>
-                    <ul class="about_skills_design_list zen-maru-gothic-regular">
-                        <li>デザインカンプ作成</li>
-                        <li>Figma</li>
-                        <li>Photoshop</li>
-                        <li>デザイン実装</li>
-                    </ul>
-                </div>
-                <div class="about_skills_application">
-                    <h3 class="about_skills_h3 zen-maru-gothic-regular">ウェブアプリケーション開発</h3>
-                    <ul class="about_skills_application_list zen-maru-gothic-regular">
-                        <li>フロントエンド開発</li>
-                        <li>HTML/CSS</li>
-                        <li>JavaScript</li>
-                        <li>バックエンド開発</li>
-                        <li>Python</li>
-                        <li>Django</li>
-                    </ul>
-                </div>
+                {% for main_category in main_categories %}
+                    <div class="about_skills_{{ main_category.name|lower }}">
+                        <h3 class="about_skills_h3 zen-maru-gothic-regular">{{ main_category.title_ja }}</h3>
+                        <ul class="about_skills_{{ main_category.name|lower }}_list zen-maru-gothic-regular">
+                            {% for sub_category in main_category.sub_categories.all %}
+                                {% if sub_category.is_active %}
+                                    <li>{{ sub_category.title_ja }}</li>
+                                    {% for skill in sub_category.skills.all %}
+                                        {% if skill.is_active %}
+                                            <li>{{ skill.name }}</li>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endfor %}
             </div>
         </div>
     </div>
