--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -8,7 +8,7 @@
 <section class="contact_container zen_maru_gothic_light">
     <div class="contact_form" id="contact_form">
         <div class="contact_title">
-            <h1 class="zen-kaku-gothic-antique-medium">Contact</h1>
+            <h1 class="zen-maru-gothic-black">Contact</h1>
             <p class="zen-maru-gothic-regular">
                 お問い合わせはこちらから<br>
                 お気軽にお問い合わせください。
@@ -48,7 +48,7 @@
         <div class="contact_title">
             <h1 class="zen-kaku-gothic-antique-medium">Contact</h1>
             <p class="zen-maru-gothic-regular">
-                入力内容の確認。
+                入力内容の確認
             </p>
         </div>
         <div class="confirmation_content">
@@ -96,8 +96,11 @@
                 内容を確認次第、担当者より折返しご連絡させていただきます。今しばらくお待ちくださいませ。<br>
                 また、ご入力いただいたメールアドレス宛に確認メールをお送りしましたので、ご確認ください。<br>
                 ※ご返信までお時間を頂戴する場合がございます。<br>
-                ※内容によりましてはご返信いたしかねる場合がございます。あらかじめご了承ください<br>
+                ※内容によりましてはご返信いたしかねる場合がございます。あらかじめご了承ください。
             </p>
+        </div>
+        <div class="completion_button zen-maru-gothic-regular">
+            <button type="button" onclick="hideCompletion()">お問い合わせページへ戻る</button>
         </div>
     </div>
 </section>
