--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -10,7 +10,6 @@ h1{
 
 .blog_container{
     width: 100%;
-    /* height: 2000px; */
     height: 100%;
     position: relative;
 }
@@ -65,9 +64,10 @@ h1{
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
 }
 
-.search_word{
+.search_word, .search-error-message{
     width: 87%;
     position: absolute;
+    margin-top: 10px;
     padding: 0 20px;
     font-size: 12px;
     font-weight: 300;
@@ -80,6 +80,20 @@ input:-webkit-autofill:active {
     transition: background-color 5000s ease-in-out 0s;
     -webkit-box-shadow: 0 0 0 30px #D9D9D9 inset !important;
     -webkit-text-fill-color: inherit !important;
+}
+
+.search-error-message {
+    color: #ff4444;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.search-error-message.show {
+    opacity: 1;
+}
+
+.search_input.error {
+    border-color: #ff4444;
 }
 
 /* category_container   ////////////////////////////////////////////////////////////////////////////////////// */
@@ -119,10 +133,9 @@ input:-webkit-autofill:active {
     background-color: #D9D9D9;
     border-radius: 5px;
     flex-shrink: 0;
-    cursor: move;
+    cursor: pointer;
     user-select: none;
     transform: translateX(0);
-    cursor: pointer;
     transition: all 0.3s ease;
 }
 
@@ -194,8 +207,6 @@ input:-webkit-autofill:active {
     border-radius: 5px;
     box-shadow: 3px 4px 15px 3px rgba(0, 0, 0, 0.25);
     background-color: #FBFAF9;
-    
-    /* トランジションを追加 */
     transition: all 0.3s ease;
     opacity: 1;
     height: auto;
@@ -203,15 +214,13 @@ input:-webkit-autofill:active {
 }
 
 .blog_article article{
+    width: 90%;
+    margin: 20px 70px;
     transition: all 0.05s ease;
     opacity: 1;
     height: auto;
     visibility: visible;
 }
-
-/* .blog_article:last-child {
-    margin-bottom: 20px;
-} */
 
 .blog_article h3{
     font-size: 24px;
@@ -223,9 +232,4 @@ input:-webkit-autofill:active {
 .meta, .content_preview{
     font-size: 12px;
     font-weight: 300;
-}
-
-article{
-    width: 90%;
-    margin: 20px 70px;
 }
