--- a/dashboard/templates/authentication/login.html
+++ b/dashboard/templates/authentication/login.html
@@ -1,28 +1,26 @@
-{% extends 'admin_base.html' %}
+{% load static %}
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/base/font.css' %}">
+<link rel="stylesheet" href="{% static 'css/authentication/login.css' %}">
+{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="text-center">ログイン</h2>
-                </div>
-                <div class="card-body">
-                    <form method="post">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary">ログイン</button>
-                        </div>
-                    </form>
-                    <!-- <div class="mt-3 text-center">
-                        <p>アカウントをお持ちでない方は<a href="{% url 'dashboard:signup' %}">こちら</a></p>
-                        <p>パスワードをお忘れの方は<a href="{% url 'dashboard:password_reset' %}">こちら</a></p>
-                    </div> -->
-                </div>
-            </div>
+<section class="login_container zen_maru_gothic_light">
+    <div class="card">
+        <div class="card_header">
+            <h2 class="text_center zen-maru-gothic-black">Login</h2>
+        </div>
+        <div class="card_body">
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="login_btn">ログイン</button>
+            </form>
+            <!-- <div class="mt_3 text_center">
+                <p>アカウントをお持ちでない方は<a href="{% url 'dashboard:signup' %}">こちら</a></p>
+                <p>パスワードをお忘れの方は<a href="{% url 'dashboard:password_reset' %}">こちら</a></p>
+            </div> -->
         </div>
     </div>
-</div>
+</section>
 {% endblock %}
