--- a/about/templates/about.html
+++ b/about/templates/about.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h1 class="page_title zen-kaku-gothic-antique-black">About</h1>
 <section class="about_container zen-maru-gothic-light">
-    <div class="scroll_bar zen-kaku-gothic-antique-regular">Scroll</div>
+    <div class="scroll_bar zen-maru-gothic-light">Scroll</div>
     <div class="about_container_inner_01_background">
         <div class="about_container_inner_01">
             <div class="about_container_inner_01_left">
