--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <input type="checkbox" name="headercloser" id="headercloser">
     <header>
         {% include 'header.html' %}
     </header>
@@ -31,5 +32,6 @@
     </footer>
 
     <!-- <script src="{% static 'myapp/js/main.js' %}"></script> -->
+    <script src="{% static 'js/header.js' %}"></script>
 </body>
 </html>
