--- a/home/static/css/home.css
+++ b/home/static/css/home.css
@@ -5,6 +5,33 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    user-select: none; 
+}
+
+#overlayLayer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: auto;
+}
+
+.blur-effect {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    background: rgba(32, 175, 191, 0.1);
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    transition: width 1.6s ease-out, height 1.5s ease-out;
+    pointer-events: none;
+    z-index: -1;
 }
 
 .home_container_inner {
