--- a/static/css/base/base.css
+++ b/static/css/base/base.css
@@ -30,6 +30,7 @@ body::-webkit-scrollbar{
     background-color: #f5f5f5;
     background-position: center;
     box-shadow: inset 1px 1px 25px 0px rgba(0, 0, 0, 0.25);
+    transition: left 0.3s ease;
 }
 
 .outborder::-webkit-scrollbar{
@@ -43,6 +44,31 @@ a{
 
 ul, li{
     list-style: none;
+}
+
+/* header ////////////////////////////////////////////////////////////////////////////////////// */
+header{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 10px;
+    bottom: 20px;
+    width: 200px;
+    z-index: 1000;
+    left: 0;
+    transition: left 0.3s ease;
+}
+
+#headercloser{
+    display: none;
+}
+
+#headercloser:checked ~ header{
+    left: -160px;
+}
+
+#headercloser:checked ~ .outborder{
+    left: 40px;
 }
 
 /* main ////////////////////////////////////////////////////////////////////////////////////// */
