--- a/static/css/base/header.css
+++ b/static/css/base/header.css
@@ -1,12 +1,19 @@
 /* header(navbar) ////////////////////////////////////////////////////////////////////////////////////// */
-header{
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 10px;
-    bottom: 20px;
-    width: 200px;
+.header-closer{
+    width: 100px;
+    height: 100px;
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #000000;
     z-index: 1000;
+}
+
+.header-closer label{
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .headerLogo{
