--- a/app/contact/templates/contact.html
+++ b/app/contact/templates/contact.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<section class="contact_container zen_maru_gothic_light">
+<section class="contact_container zen-maru-gothic-regular">
     <div class="contact_form" id="contact_form">
         <div class="contact_title">
             <h1 class="zen-maru-gothic-black">Contact</h1>
