--- a/templates/header.html
+++ b/templates/header.html
@@ -24,14 +24,14 @@
             </div>
         </a>
     </div>
-    <div class="nav_item {% if 'gallery' in request.path %}active{% endif %}">
+    <!-- <div class="nav_item {% if 'gallery' in request.path %}active{% endif %}">
         <a href="{% url 'gallery:gallery' %}">
             <div class="nav_name nav_no_icon">
                 <div class="japanese">制作実績</div>
                 <div class="english">Gallery</div>
             </div>
         </a>
-    </div>
+    </div> -->
     <div class="nav_item {% if 'blog' in request.path %}active{% endif %}">
         <a href="{% url 'blog:blog' %}">
             <div class="nav_name nav_no_icon">
