--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Zen+Kaku+Gothic+Antique:wght@300&family=Zen+Kurenaido&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
     <title>{% block title %}Machida Hayato Portfolio{% endblock %}</title>
-
+    
     {% load static %}
+    <link rel="icon" type="image/x-icon" href="{% static 'image/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'css/base/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/base/header.css' %}">
     <link rel="stylesheet" href="{% static 'css/base/font.css' %}">
